<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>qt_dotgraph</name>
  <version>0.3.4</version>
  <description>
    qt_dotgraph provides helpers to work with dot graphs.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_dotgraph</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Thibault Kruse</author>

  <buildtool_depend>ament</buildtool_depend>

  <exec_depend>python-pydot</exec_depend>
  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>

  <test_depend>python-pygraphviz</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
