<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>qt_gui_app</name>
  <version>0.3.4</version>
  <description>
    qt_gui_app provides the main to start an instance of the integrated graphical user interface provided by qt_gui.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_app</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_app</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_app/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament</buildtool_depend>

  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
