<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>qt_gui_py_common</name>
  <version>0.3.4</version>
  <description>
    qt_gui_py_common provides common functionality for GUI plugins written in Python.
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_py_common</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dorian Scholz</author>

  <buildtool_depend>ament</buildtool_depend>

  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
  <exec_depend>python-rospkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
